WindGroup Dev/src/objects/Daily_Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>AWS_Id__c</fullName>
        <externalId>true</externalId>
        <label>AWS Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Actual_Date_Time__c</fullName>
        <label>Actual Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Backend_Last_Updated_DateTime__c</fullName>
        <label>Backend Last Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checklist_Master_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Master Item</label>
        <referenceTo>Checklist_Master_Item__c</referenceTo>
        <relationshipLabel>Daily Checklist Items</relationshipLabel>
        <relationshipName>Daily_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Type__c</fullName>
        <formula>TEXT( Daily_Checklist__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Daily_Checklist_AWS_Id__c</fullName>
        <externalId>true</externalId>
        <label>Daily Checklist AWS Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Checklist__c</fullName>
        <label>Daily Checklist</label>
        <referenceTo>Daily_Checklist__c</referenceTo>
        <relationshipLabel>Daily Checklist Items</relationshipLabel>
        <relationshipName>Daily_Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FM_SN__c</fullName>
        <formula>VALUE( SN__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S/N</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handover_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handover Condition</label>
        <referenceTo>Conditions__c</referenceTo>
        <relationshipLabel>Daily Checklist Items</relationshipLabel>
        <relationshipName>Daily_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Types__c</fullName>
        <label>Issue Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Issue_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Item_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Update_Date_Time__c</fullName>
        <label>Last Update Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_From__c</fullName>
        <label>Last Updated From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>App</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Checklist Item</label>
        <referenceTo>Daily_Checklist_Item__c</referenceTo>
        <relationshipLabel>Daily Checklist Items</relationshipLabel>
        <relationshipName>Parent_Checklist_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Daily Checklist Items</relationshipLabel>
        <relationshipName>Daily_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SN__c</fullName>
        <label>S/N</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Daily Checklist Items</relationshipLabel>
        <relationshipName>Daily_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Daily Checklist Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Backend_Last_Updated_DateTime__c</columns>
        <columns>Last_Update_Date_Time__c</columns>
        <columns>Daily_Checklist__c</columns>
        <columns>AWS_Id__c</columns>
        <columns>Description__c</columns>
        <columns>Condition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AWS_Id__c</field>
            <operation>contains</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMM}-DI-{000000}</displayFormat>
        <label>Daily Checklist Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>